# docs/swagger.yaml
@@ -1,7 +1,37 @@
 definitions:
-  model.SwaggerProject:
+  model.Account:
     properties:
-      createAt:
+      createdAt:
+        type: string
+      description:
+        maxLength: 50
+        minLength: 2
+        type: string
+      id:
+        maxLength: 32
+        type: string
+      projectID:
+        maxLength: 32
+        type: string
+      updatedAt:
+        type: string
+    required:
+    - description
+    - id
+    - projectID
+    type: object
+  model.Accounts:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/model.Account'
+        type: array
+      pager:
+        $ref: '#/definitions/pkg.Pager'
+    type: object
+  model.Project:
+    properties:
+      createdAt:
         type: string
       id:
         type: string
@@ -9,16 +39,16 @@ definitions:
         maxLength: 500
         minLength: 2
         type: string
-      updateAt:
+      updatedAt:
         type: string
     required:
     - name
     type: object
-  model.SwaggerProjects:
+  model.Projects:
     properties:
       data:
         items:
-          $ref: '#/definitions/model.SwaggerProject'
+          $ref: '#/definitions/model.Project'
         type: array
       pager:
         $ref: '#/definitions/pkg.Pager'
@@ -48,6 +78,91 @@ info:
   title: TrackMaster
   version: "1.0"
 paths:
+  /api/v1/accounts:
+    get:
+      parameters:
+      - description: page
+        in: query
+        name: page
+        type: string
+      - description: page size
+        in: query
+        name: pageSize
+        type: string
+      - description: description
+        in: query
+        name: description
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            items:
+              $ref: '#/definitions/model.Accounts'
+            type: array
+        "400":
+          description: 请求错误
+          schema:
+            $ref: '#/definitions/pkg.Error'
+        "500":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/pkg.Error'
+      tags:
+      - account
+    post:
+      parameters:
+      - description: account
+        in: body
+        name: project
+        schema:
+          $ref: '#/definitions/model.Account'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            items:
+              $ref: '#/definitions/model.Account'
+            type: array
+        "400":
+          description: 请求错误
+          schema:
+            $ref: '#/definitions/pkg.Error'
+        "500":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/pkg.Error'
+      tags:
+      - account
+  /api/v1/accounts/{id}:
+    delete:
+      parameters:
+      - description: account id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            type: object
+        "400":
+          description: 请求错误
+          schema:
+            $ref: '#/definitions/pkg.Error'
+        "500":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/pkg.Error'
+      tags:
+      - account
   /api/v1/projects:
     get:
       produces:
@@ -57,7 +172,7 @@ paths:
           description: 成功
           schema:
             items:
-              $ref: '#/definitions/model.SwaggerProjects'
+              $ref: '#/definitions/model.Projects'
             type: array
         "400":
           description: 请求错误
@@ -69,7 +184,7 @@ paths:
             $ref: '#/definitions/pkg.Error'
       tags:
       - project
-  /api/v1/sync-projects:
+  /api/v1/projects/sync:
     post:
       produces:
       - application/json
