# handler/project.go
@@ -16,16 +16,16 @@ func NewProjectHandler(s service.ProjectService) ProjectHandler {
 	}
 }
 
-// SyncProject
+// Sync
 // @Tags project
 // @Summery sync project
 // @Produce json
 // @Success 200 {object} object "成功"
 // @Failure 400 {object} pkg.Error "请求错误"
 // @Failure 500 {object} pkg.Error "内部错误"
-// @Router /api/v1/sync-projects [post]
+// @Router /api/v1/projects/sync [post]
 // 更新本地的project表，让他和jet上的保持同步
-func (h ProjectHandler) SyncProject(c *gin.Context) {
+func (h ProjectHandler) Sync(c *gin.Context) {
 	res := pkg.NewResponse(c)
 	err := h.service.SyncProject()
 	if err != nil {
@@ -34,15 +34,15 @@ func (h ProjectHandler) SyncProject(c *gin.Context) {
 	res.ToResponse(nil)
 }
 
-// ListProjects
+// List
 // @Tags project
 // @Summery list project
 // @Produce json
-// @Success 200 {array} model.SwaggerProjects "成功"
+// @Success 200 {array} model.Projects "成功"
 // @Failure 400 {object} pkg.Error "请求错误"
 // @Failure 500 {object} pkg.Error "内部错误"
 // @Router /api/v1/projects [get]
-func (h ProjectHandler) ListProjects(c *gin.Context) {
+func (h ProjectHandler) List(c *gin.Context) {
 	res := pkg.NewResponse(c)
 	projects, err := h.service.ListProject()
 	if err != nil {
