# router/project.go
@@ -7,19 +7,11 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-func NewRouter() *gin.Engine {
-	r := gin.New()
-	r.Use(gin.Logger())
-	r.Use(gin.Recovery())
-
+func AddProjectRoutes(g *gin.RouterGroup) {
 	projectService := service.NewProjectService(initializer.DB)
 	projectHandler := handler.NewProjectHandler(projectService)
 
-	apiV1 := r.Group("api/v1")
-	{
-		apiV1.POST("/sync-projects", projectHandler.SyncProject)
-		apiV1.GET("/projects", projectHandler.ListProjects)
-	}
+	g.POST("/projects/sync", projectHandler.Sync)
+	g.GET("/projects", projectHandler.List)
 
-	return r
 }
